Changelog
=========

3.3-dev0 - (unreleased)
---------------------

3.2 - (2018-06-22)
-----------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

3.1 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

3.0 - (2017-11-14)
------------------
* Change: Added handler for SAXParseException and wrote a test in order to
  cover this exception
  [petchesi-iulian refs #88573]

2.9 - (2017-09-29)
------------------
* Change: Changed the projects tests structure in order to make the tests work
  [petchesi-iulian refs #88509]

2.8 - (2017-08-16)
------------------
* Change: Added sparql export method formats (xml, xmlschema, json) to be stored
  and retrieved from cache
  [zoltan_andras refs #86464]

2.7 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

2.6 - (2016-10-04)
------------------
* Change: added timeout parameter for _get_response

2.5 - (2016-07-29)
------------------
* Bug fix: Safely get __version__ from version.txt
  [voineali refs #74283]

2.4 - (2016-07-29)
------------------
* Bug fix: Read __version__ from version.txt
  [voineali refs #74283]

2.3 - (2016-07-19)
------------------
* Change: fixed changelog markup and removed __version__
  [alecghica refs #74151]

2.2 - (2016-06-16)
------------------
* Feature: Fix Comment in sparql queries
  [lucas refs #72876]

2.1 - (2016-06-02)
------------------
* Bug fix: Fix passing of method from service to query

2.0 - (2016-04-18)
------------------
* Bug fix: fixed error reporting when running query
  [alecghica refs #68990]

1.9 - (2016-02-01)
------------------
* Bug fix: fix timeout exception call now that we have moved to eventlet
  [ichim-david refs #17334]

1.8 - (2015-10-05)
------------------
* Bug fix: set socket timeout to prevent Zope instances hanging out when the external service is not responding
  [lucas refs #29063]
